2019-09-29  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_display.c: ui_display_show_root() calls wl_display_dispatch().
	  (Fix for 1) in https://sourceforge.net/p/mlterm/discussion/130836/thread/bc008c18db/#bb38)

	* mlconfig/po/Makefile.in: config.status is never called.

2019-09-28  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui.h, wayland/ui_display.c: xdg-shell is supported.

	* xdg-shell-unstable-v6-client-protocol.[ch]: Added.

2019-09-23  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_window.c: class_hint (WM_CLASS property) is passed to
	  XmbSetWMProperties() in ui_window_show().

	* vt_pty_mosh.cpp: Pass through sequence state of each Network::Transport
	  is saved in pass_seq_t.

2019-09-23  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_window.c: _NET_WM_PID is set.
	  (https://sourceforge.net/p/mlterm/patches/24/)

	* zmodem.c: q_screen_dirty is removed.

2019-09-22  Araki Ken  <arakiken@users.sf.net>

	* ui_display_wscons.c:
	  (fboffset + 0x40000) * _disp.depth => fboffset + 0x40000 * _disp.depth

2019-09-21  Araki Ken  <arakiken@users.sf.net>

	* ui_im_candidate_screen.c: ui_im_candidate_t::filled_len = 0
	  in case it is not 0.

2019-09-19  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* win32/ui_xic.c:
	  Ctrl-^ is converted to 0x1e instead of 0x1d.

	* vt_parser.c:
	  "zmodem_send" and "zmodem_recv" are integrated to "zmodem_start"
	  and "zmodem_cancel" is added in vt_parser_exec_cmd().

	* vt_transfer.[ch]:
	  vt_transfer_cancel() is added.

	* zmodem.[ch]:
	  zmodem_cancel() is added.

	* vt_pty_mosh.cpp:
	  - Only zmodem packets are transferred via tcp connection.
	  - If MOSH_NO_TCP environmental variable is set, tcp connection is disabled.
	  - Ctrl-^ commands (Ctrl-. (quit) and Ctrl-, (reset)) are supported.

2019-09-01  Araki Ken  <arakiken@users.sf.net>

	* gdiplus.cpp: Uninitialized memory access in gdiplus.cpp is fixed.

2019-09-01  Araki Ken  <arakiken@users.sf.net>
